--- a/notebook/problems.es.ipynb
+++ b/notebook/problems.es.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "8467465b",
    "metadata": {},
    "outputs": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "57cd6641",
    "metadata": {},
    "outputs": [
@@ -125,10 +125,7 @@
     "    # Eliminación de puntuaciones\n",
     "    text = text.translate(str.maketrans(\"\", \"\", string.punctuation))\n",
     "\n",
-    "    # Split text into words\n",
-    "    words = text.split()\n",
-    "\n",
-    "    # Conteo de frecuencias\n",
+    "    # Separar en palabras y conteo de frecuencias\n",
     "    frecuencias = Counter(text.split())\n",
     "\n",
     "    # Obtener las 5 palabras más comunes\n",
